<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Onde Tem</string>
    <string name="app_description">Recomendando locais e serviços na cidade de São Carlos</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_review">Reviews</string>
    <string name="no_reviews">This place has no reviews</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="about_message">This project was supported by CAPES/Brazil\n
        \nOndeTem - Version 2.0</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="category_car">Car Services</string>
    <string name="category_bank">Banks</string>
    <string name="category_education">Education</string>
    <string name="category_medical">Medical Care</string>
    <string name="category_emergency">Emergency Services</string>
    <string name="category_culture">Culture \u0026 Entertainment</string>
    <string name="category_food">Food \u0026 Drink</string>
    <string name="category_government">Government</string>
    <string name="category_lodging">Lodging</string>
    <string name="category_recreation">Recreation</string>
    <string name="category_publicservices">Public Services</string>
    <string name="category_shops">Service Shops/Stores</string>
    <string name="category_transport">Public Transport</string>
    <string name="category_worship">Places of Worship</string>
    <string name="category_home">Basic Home Services</string>
    <string name="category_beauty">Beauty Care</string>
    <string name="category_administrative">Administrative Services</string>
    <string name="category_animal">Animal Care</string>
    <string name="category_notary">Legal Services \u0026 Mail</string>
    <string name="city_selection">"City:"</string>
    <string name="num_places">"Number of places:"</string>
    <string name="city_saocarlos">"São Carlos"</string>
    <string name="review_place">Add a Review</string>
    <string name="leave_comment">Say something about this place</string>
    <string name="submit_button">Submit</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="finding_route">Obtaining Route </string>
    <string name="route_duration">Duration: </string>
    <string name="route_mode_driving">Mode:Driving</string>
    <string name="route_mode_walking">Mode:Walking</string>
    <string name="no_connection">Can\'t find Internet connection</string>
    <string name="searching">Searching</string>
    <string name="no_results">No results found</string>
    <string name="confirm_submit">Submit Review?</string>
    <string name="checkin_available">Check In available</string>
    <string name="checkin_confirm">Would you like to check in to</string>
    <string name="checkin_button">Check in</string>
    <string name="checkin_done">Successfully checked in</string>
    <string name="settings_done">Successfully saved</string>
    <string name="checkin_unavailable">Check in unavailable</string>
    <string name="checkin_not_possible">Check in is unavailable from this distance</string>
    <string name="language">en</string>
    <string name="needs_gps">Onde Tem needs to get your location </string>
    <string name="open_settings">Please change your location settings and try again </string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
