<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#404040"
        android:gravity="center"
        android:text="@string/review_place"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFFFF" />

    <TextView
        android:id="@+id/review_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="center_vertical|center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#CFD8DC" />
    
     

    <RatingBar
        android:id="@+id/review_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/review_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/leave_comment"
        android:inputType="textMultiLine" >

        <requestFocus
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </EditText>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal" >

		<Button
		    android:id="@+id/review_cancel"
		    style="@style/ButtonBarButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel_button" />

	    <Button
	        android:id="@+id/review_submit"
	        style="@style/ButtonBarButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit_button" />

	</LinearLayout>
	     
</LinearLayout>
